# Omnibot

./: README.md  keys.sh  onshape_keys.txt
src/nodes/: CMakeLists.txt  SimpleParameterNode.cpp  SimpleParameterNode.h  package.xml
src/omnibot_controller/: CMakeLists.txt  package.xml
src/omnibot_controller/config/: omnibot_controllers.yaml
src/omnibot_controller/launch/: controller.launch.py
src/omnibot_description/: CMakeLists.txt  package.xml
src/omnibot_description/backup/: omnibot.urdf.xacro  omnibot_gazebo.xacro  omnibot_ros2_control.xacro  roller.xacro
src/omnibot_description/backup/wheel/: colision_omni_roller.stl  wheel.stl  (+1 more)
src/omnibot_description/launch/: display.launch.py  gazebo.launch.py
src/omnibot_description/meshes/: base.stl  motor.stl  omni_bot_base.stl  roller.stl  spacer.stl  wheel.stl
src/omnibot_description/rviz/: display.rviz
src/omnibot_description/urdf/: axys_rod.part  axys_rod.stl  base.part  config.json  config.sh  omnibot.urdf.xacro  omnibot_gazebo.xacro  omnibot_ros2_control.xacro  part_1.part  plate1.part  plate1.scad  plate1.stl  plate2.part  plate2.scad  plate2.stl  robot.urdf  roller.part  roller.scad  roller.xacro  spacer.part  wheel.xacro
src/onshape_description/: CMakeLists.txt  package.xml
src/onshape_description/omnibot/: axys_rod.part  body.part  body.stl  config.json  omni_003_(solid)001.part  omni_1_4mm_hole001_(solid).part  omni_roller001_(solid)001.part  omni_roller001_(solid)001.stl  omni_spacer001_(solid)001.part  part_1.part  part_1.stl  robot.urdf
src/onshape_description/temp/: config.json  robot.urdf
(+1 files in other folders)
